<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newspeed"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_newspeed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_edit"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"/>

</menu>
