<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.hongsup.explog.view.cover.CoverActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="2dp"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/textCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/coverLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:id="@+id/photoAndTextLayout"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/imgCover"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sign"
                    android:tint="@color/colorPostTint" />

                <RelativeLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <com.hongsup.explog.view.custom.LimitedEditText
                        android:id="@+id/editTitle"
                        style="@style/CoverEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="여행 제목을 작성해주세요!"
                        android:maxLength="50"
                        android:maxLines="2"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editTitle"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textStartDate"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/border_cover_textdateview"
                            android:gravity="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/cover_hyphen"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/textEndDate"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/border_cover_textdateview"
                            android:gravity="center"
                            android:text="@string/txt_end_date"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/photoAndTextLayout"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/btnHashTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_hashtag_gray_24dp"
                    android:drawableStart="@drawable/ic_hashtag_gray_24dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/cover_hash"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/btnHashTag"
                    android:layout_toRightOf="@+id/btnHashTag"
                    android:background="@drawable/border_cover_tag"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btnChangeCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_insert_photo_gray_24dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_insert_photo_gray_24dp"
                    android:padding="8dp"
                    android:text="@string/cover_change"
                    android:textColor="@color/colorGray" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
